--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -1,7 +1,12 @@
-# Copyright (C) 2020-2023 Aditya Shakya <adi1090x@gmail.com>
-#
-# Hyprland configuration file for Archcraft
-# Version: 0.20.0 Beta
+#########################################################
+#                                                       #
+#  Hyprland Config File                                 #
+#                                                       #
+#  Author: Iglinsc <igli.linux@gmail.com>               #
+#                                                       #
+#  This script sets up the configuration for Hyprland,  #
+#                                                       #
+#########################################################
 
 #-- Source Files -----------------------------------------------
 source = ~/.config/hypr/hyprtheme.conf
