--- a/dotfiles/.config/hypr/hyprtheme.conf
+++ b/dotfiles/.config/hypr/hyprtheme.conf
@@ -1,5 +1,14 @@
-# Copyright (C) 2020-2023 Aditya Shakya <adi1090x@gmail.com>
-#
+######################################################
+#                                                    #
+#  Hyprtheme Configuration File                      #
+#                                                    #
+#  Author: Iglinsc <igli.linux@gmail.com>            #
+#                                                    #
+#  This file contains Theme Elements &Colors for     #
+#   Hyprland.                                        #
+#                                                    #
+######################################################
+
 # Theme Elements & Colors for Hyprland.
 
 # Elements
