--- a/dotfiles/.config/hypr/alacritty/colors.yml
+++ b/dotfiles/.config/hypr/alacritty/colors.yml
@@ -1,5 +1,16 @@
-## Copyright (C) 2020-2023 Aditya Shakya <adi1090x@gmail.com>
-##
+#############################################################
+#                                                           #
+#  Alacritty Terminal Emulator Colorscheme Configuration    #
+#                                                           #
+#  Author: Iglinsc <igli.linux@gmail.com>                   #
+#                                                           #
+#  This file contains colorscheme configuration settings    #
+#  for the Alacritty terminal emulator.                      #
+#                                                           #
+#############################################################
+
+
+
 ## Colors configuration
 
 colors:
