--- a/dotfiles/.config/hypr/alacritty/fonts.yml
+++ b/dotfiles/.config/hypr/alacritty/fonts.yml
@@ -1,6 +1,16 @@
-## Copyright (C) 2020-2023 Aditya Shakya <adi1090x@gmail.com>
-##
-## Font configuration
+#############################################################
+#                                                           #
+#  Alacritty Terminal Emulator Fonts Configuration          #
+#                                                           #
+#  Author: Iglinsc <igli.linux@gmail.com>                   #
+#                                                           #
+#  This file contains fonts configuration settings for the  #
+#  Alacritty terminal emulator.                             #
+#                                                           #
+#############################################################
+
+
+
 
 font:
   # Normal (roman) font face
