--- a/dotfiles/.config/hypr/wofi/config
+++ b/dotfiles/.config/hypr/wofi/config
@@ -1,6 +1,13 @@
-## Copyright (C) 2020-2023 Aditya Shakya <adi1090x@gmail.com>
-##
-## Wofi Config
+##################################################
+#                                                #
+#  Wofi Configuration File                       #
+#                                                #
+#  Author: Iglinsc <igli.linux@gmail.com>        #
+#                                                #
+#  This file contains the configuration settings #
+#  for the wofi launcher.                        #
+#                                                #
+##################################################
 
 ## General
 show=drun
